feat: changes login method with passport local strategy
